# tools

./: .gitignore  .gitmodules  bookmarks.md
bash/: f  go-ctf.sh  parse-python-subclasses.sh  ssti-flask-subclasses-parser.sh
cpp/keylogger/: main.cpp
cves/CVE-2020-9484/: README.md  index.jsp  script.js  upload.jsp
java/: PatternCheck.java
java/seriadeserialize/: Main.java  _Object.java  test
python/: aencoder.py  chrome_php_console_brute.py  l  make_flask_session.py  phpass_hash_extract.py  pyterpreter.py  reverse_shell.py  reverse_shell.spec  roots.py  roots.spec
python/Untitled Folder/: Untitled.ipynb  Untitled1.ipynb  benchmarks.ipynb  numerical_bracketing_methods.ipynb  numerical_open_methods.ipynb
python/permutations/: permutations.py
python/permutations/extension/: background.html  manifest.json  permutations.xpi  popup.html
python/permutations/extension/js/: background.js  popup.js
python/permutations/extension/style/: popup.css
rust/: jsonp.rs
rust/dubppi/: .env  Cargo.toml  backup.sql  populate.csv  populate.txt  todos.txt
rust/dubppi/burp-extension/burp/burp/: BurpExtender.java  Jsonifiers.java
rust/dubppi/consumer/: Cargo.toml
rust/dubppi/consumer/src/: actors.rs  handlers.rs  helpers.rs  lib.rs  models.rs  schema.rs
rust/dubppi/extension/: background.js  executables.js  manifest.json  options.html  options.js  popup.html
rust/dubppi/organizer/: Cargo.toml
rust/dubppi/organizer/migrations/2020-12-24-221040_create_tables/: down.sql  up.sql
rust/dubppi/organizer/src/: helpers.rs  lib.rs  models.rs  schema.rs
rust/dubppi/recon/: Cargo.toml
rust/dubppi/recon/src/: amass.rs  commoncrawl.rs  lib.rs  models.rs  thread_pool.rs  wayback.rs
rust/dubppi/src/: cli.yml  main.rs
rust/webpasteplus/extension/: background.js  manifest.json  popup.js  snippets.js  snips
rust/webpasteplus/reciever/: Cargo.toml  test,
rust/webpasteplus/reciever/migrations/: webpasteplus.erd.vpd
rust/webpasteplus/reciever/migrations/2020-12-19-025301_create_tables/: down.sql  up.sql
rust/webpasteplus/reciever/src/: argparser.rs  dbmodels.rs  dbwriter.rs  lib.rs  paster.rs  schema.rs  separator.rs  server.rs  thread_pool.rs
rust/webpasteplus/reciever/src/responses/: 200.txt  204.txt
rust/webpasteplusi/: Cargo.toml  populate.sh
rust/webpasteplusi/consumer/: Cargo.toml
rust/webpasteplusi/consumer/src/: actors.rs  handlers.rs  helpers.rs  lib.rs  schema.rs
rust/webpasteplusi/extension/: background.js  executables.js  manifest.json  options.html  options.js  popup.html  popup.js
rust/webpasteplusi/extension/style/: options.css  popup.css
rust/webpasteplusi/migrations/2020-12-21-223327_create_subdomains_table/: down.sql  up.sql
rust/webpasteplusi/migrations/2020-12-21-223854_create_dns_table/: down.sql  up.sql
rust/webpasteplusi/migrations/2020-12-21-224131_create_endpoints_tables/: down.sql  up.sql
rust/webpasteplusi/migrations/2020-12-23-172645_create_initial_store/: down.sql  up.sql
rust/webpasteplusi/organizer/: Cargo.toml
rust/webpasteplusi/organizer/migrations/2020-12-24-221040_create_tables/: up.sql
rust/webpasteplusi/organizer/src/: helpers.rs  lib.rs  models.rs  schema.rs
rust/webpasteplusi/src/: actors.rs  cli.yml  handlers.rs  helpers.rs  main.rs  models.rs  schema.rs
