[package]
name = "recon"
version = "0.1.0"
authors = ["Y0h4n3s <yohaksa80@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
organizer = {path = "../organizer"}
consumer = {path = "../consumer"}
log = "0.4"
env_logger = "*"
pretty_env_logger = "0.3"
dotenv = "0.15.0"
reqwest = {version = "0.10.10"}
diesel = {version = "1.4.5", features = ["postgres", "r2d2"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
r2d2 = "*"
tokio = "0.2.0"
futures = "0.3.8"