[package]
name = "reciever"
version = "0.1.0"
authors = ["Y0h4n3s <yohaksa80@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
regex = "1"
lazy_static = "1.4.0"
permutate = "*"
juniper = "*"
features = "*"
env_logger = "*"
dotenv = "*"
diesel = { version = "1.0.0", features = ["postgres"] }
actix-web = "1.0.0"