[package]
name = "reciever"
version = "0.1.0"
authors = ["Y0h4n3s <yohaksa80@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
regex = "1"
juniper = "*"
features = "*"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
actix-web = "3"
actix-cors = "*"